fix text overlap

--- a/style.css
+++ b/style.css
@@ -88,14 +88,14 @@ button {
     background-color: #BCE29E;
     width: 100%;
     max-width: 290px;
-    height: 80px;
+    height: 100px;
     font-size: 40px;
     vertical-align: bottom;
     text-align: right;
     padding-right: 16px;
     background-color: #ececec;
-    border-radius: 10px;
-    border: .5px solid rgb(155, 155, 155);
+    border-radius: 5px;
+    border: .5px solid rgb(207, 198, 198);
     position: relative;
 }
 
